--- a/LibraryWebApp/LibraryWebApp.csproj
+++ b/LibraryWebApp/LibraryWebApp.csproj
@@ -133,10 +133,12 @@
     <Compile Include="Mapping\Mapper.cs" />
     <Compile Include="Models\AuthorListVM.cs" />
     <Compile Include="Models\AuthorModel.cs" />
+    <Compile Include="Models\BaseModel.cs" />
     <Compile Include="Models\BookListVM.cs" />
     <Compile Include="Models\BookModel.cs" />
     <Compile Include="Models\GenreListVM.cs" />
     <Compile Include="Models\GenreModel.cs" />
+    <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Models\PublisherListVM.cs" />
     <Compile Include="Models\PublisherModel.cs" />
     <Compile Include="Models\RoleListVM.cs" />
@@ -169,7 +171,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
-    <Content Include="Scripts\TestJS.js" />
+    <Content Include="Scripts\site.js" />
     <Content Include="Static\catalog.html" />
     <Content Include="Static\eventsandvideos.html" />
     <Content Include="Static\home.html" />
@@ -196,13 +198,17 @@
     <Content Include="Views\User\GetUsers.cshtml" />
     <Content Include="Views\User\CreateUser.cshtml" />
     <Content Include="Views\User\UpdateUser.cshtml" />
+    <Content Include="Views\Publisher\CreatePublisher.cshtml" />
+    <Content Include="Views\Publisher\UpdatePublisher.cshtml" />
+    <Content Include="Views\Publisher\GetPublishers.cshtml" />
+    <Content Include="Views\Home\Register.cshtml" />
+    <Content Include="Views\Home\Login.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\Author\" />
     <Folder Include="Views\Book\" />
     <Folder Include="Views\Genre\" />
-    <Folder Include="Views\Publisher\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
