--- a/LibraryWebApp/LibraryWebApp.csproj
+++ b/LibraryWebApp/LibraryWebApp.csproj
@@ -555,12 +555,16 @@
     <Content Include="Views\Shared\_Layout_Librarian.cshtml" />
     <Content Include="Views\Shared\_Layout_Administrator.cshtml" />
     <Content Include="Views\Home\Search.cshtml" />
+    <Content Include="Views\Book\GetBooks.cshtml" />
+    <Content Include="Views\Book\CreateBook.cshtml" />
+    <Content Include="Views\Book\UpdateBook.cshtml" />
+    <Content Include="Views\Genre\GetGenres.cshtml" />
+    <Content Include="Views\Genre\CreateGenre.cshtml" />
+    <Content Include="Views\Genre\UpdateGenre.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\Author\" />
-    <Folder Include="Views\Book\" />
-    <Folder Include="Views\Genre\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
